tests/programs/errors/option_propagate_wrong_return.reflow
module tests.errors.option_propagate_wrong_return

fn get(): int? {
    return some(42)
}

fn main(): none {
    let v = get()?
}
